<?xml version="1.0"?>
<package>
    <name>slam_sim</name>
    <version>0.0.0</version>
    <description>The slam_sim package</description>

    <maintainer email="francisc0garcia@hotmail.com">Francisco J. Garcia R.</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>youbot_description</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>robot_state_publisher</build_depend>

    <run_depend>xacro</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>youbot_description</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>robot_state_publisher</run_depend>

    <run_depend>youbot_gazebo_control</run_depend>
    <run_depend>youbot_gazebo_robot</run_depend>
    <run_depend>youbot_gazebo_worlds</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>